@@ -24,7 +24,7 @@ CONFIG(int, HangTimeout).defaultValue(10).minimumValue(-1).maximumValue(600)
 
 namespace Watchdog
 {
-	static const char* threadNames[] = {"main", "load", "audio"};
+	static const char* threadNames[] = {"main", "load", "audio", "vfsi"};
 
 	static spring::mutex wdmutex;
 
@@ -143,9 +143,9 @@ namespace Watchdog
 
 			if (hangDetected) {
 				LOG_L(L_WARNING, "[Watchdog] Hang detection triggered for Spring %s.", SpringVersion::GetFull().c_str());
-				LOG_L(L_WARNING, "\t(in threads: {%s,%s,%s}={%d,%d,%d})",
-					threadNames[WDT_MAIN], threadNames[WDT_LOAD], threadNames[WDT_AUDIO],
-					hangThreads[WDT_MAIN], hangThreads[WDT_LOAD], hangThreads[WDT_AUDIO]
+				LOG_L(L_WARNING, "\t(in threads: {%s,%s,%s,%s}={%d,%d,%d,%d})",
+					threadNames[WDT_MAIN], threadNames[WDT_LOAD], threadNames[WDT_AUDIO], threadNames[WDT_VFSI],
+					hangThreads[WDT_MAIN], hangThreads[WDT_LOAD], hangThreads[WDT_AUDIO], hangThreads[WDT_VFSI]
 				);
 
 				CrashHandler::PrepareStacktrace(LOG_LEVEL_WARNING);
