@@ -14,6 +14,7 @@ Lua:
 
 Misc:
  - remove joystick support
+ - detect hangs during filesystem initialisation
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 
 
